<resources>
    <string name="app_name">Belanja</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_an_account">Don\'t have an Account?</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="or">or</string>
    <string name="lost_password">Lost Password?</string>
    <string name="sign_in_failed">Sign In Failed</string>
    <string name="pay">Pay</string>
    <string name="total">Total</string>
    <string name="delete">Delete</string>
    <string name="price">Price</string>
    <string name="hint_message">Type a message</string>
    <string name="fullNameUser">$1%s $2%s</string>
</resources>