<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.auth.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/image_logo_shoppingbasket"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_size_large"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="@dimen/text_size_xlarge"
        app:layout_constraintStart_toEndOf="@+id/logo_image"
        app:layout_constraintTop_toTopOf="@+id/logo_image" />

    <TextView
        android:id="@+id/label_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_size_large"
        android:layout_marginTop="@dimen/margin_padding_size_small"
        android:fontFamily="@font/lalezar"
        android:text="@string/app_name"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintStart_toEndOf="@+id/logo_image"
        app:layout_constraintTop_toBottomOf="@+id/label_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_padding_size_medium"
        android:layout_marginVertical="@dimen/margin_padding_size_small"
        android:hint="@string/hint_username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="@dimen/margin_padding_size_small"
            android:fontFamily="@font/montserrat"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_padding_size_medium"
        android:layout_marginVertical="@dimen/margin_padding_size_medium"
        android:hint="@string/hint_password"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="@dimen/margin_padding_size_small"
            android:fontFamily="@font/montserrat"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_lost_password"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_margin="@dimen/margin_padding_size_medium"
        android:backgroundTint="?attr/colorOnPrimary"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/lost_password"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_text_input"
        app:layout_constraintWidth_percent="0.45" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_margin="@dimen/margin_padding_size_medium"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_text_input"
        app:layout_constraintWidth_percent="0.45" />

    <TextView
        android:id="@+id/label_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_padding_size_medium"
        android:fontFamily="@font/montserrat"
        android:text="@string/or"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <TextView
        android:id="@+id/label_sign_in_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_padding_size_medium"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in_with"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_or" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_with_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_sign_in_with" />


    <TextView
        android:id="@+id/label_dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_padding_size_small"
        android:fontFamily="@font/montserrat"
        android:text="@string/dont_have_an_account"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_medium"
        android:backgroundTint="?attr/colorSecondaryVariant"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

